Bug 527800 - NPCocoaEvent structures sometimes not initialized in nsChildView.mm. r=josh